@@ -1,6 +1,7 @@
 2019-xx-xx - 2.4.3
 -------------------------------
 - Fixed a problem with $service object.
+- Fixed a problem with Service Provider price.
 
 2019-03-18 - 2.4.2
 -------------------------------
